[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "disdrodb"
authors = [
	{name = "Gionata Ghiggi"},
]
description = "This package provides tools to homogenize, process, and analyze global disdrometer data."
readme = "README.md"
keywords = ["python", "disdrometer","parsivel", "drop size distribution"]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Unix",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
	"click",
	"tqdm",
	"pooch",
	"donfig",
	"requests",
	"PyYAML",
	"trollsift",
	"h5py",
	"netCDF4",
	"pyarrow",
	"pandas",
	"dask[distributed]",
	"xarray",
	"setuptools",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
	"sphinx",
	"sphinx_book_theme",
	"nbsphinx",
	"jupyter",
	"pre-commit",
	"pytest",
	"pydantic",
	"pytest-cov",
	"pytest-mock",
	"requests-mock",
]

[tool.setuptools_scm]
write_to = "disdrodb/_version.py"

[tool.setuptools]
packages = ["disdrodb"]

[project.scripts]
# Initialization
disdrodb_initialize_station="disdrodb.api.create_directories.scripts.disdrodb_initialize_station:disdrodb_initialize_station"
# L0A
disdrodb_run_l0a_station="disdrodb.l0.scripts.disdrodb_run_l0a_station:disdrodb_run_l0a_station"
disdrodb_run_l0a="disdrodb.l0.scripts.disdrodb_run_l0a:disdrodb_run_l0a"
# L0B
disdrodb_run_l0b_station="disdrodb.l0.scripts.disdrodb_run_l0b_station:disdrodb_run_l0b_station"
disdrodb_run_l0_station="disdrodb.l0.scripts.disdrodb_run_l0_station:disdrodb_run_l0_station"
# L0B concatenation
disdrodb_run_l0b_concat_station="disdrodb.l0.scripts.disdrodb_run_l0b_concat_station:disdrodb_run_l0b_concat_station"
disdrodb_run_l0b_concat="disdrodb.l0.scripts.disdrodb_run_l0b_concat:disdrodb_run_l0b_concat"
# L0
disdrodb_run_l0b="disdrodb.l0.scripts.disdrodb_run_l0b:disdrodb_run_l0b"
disdrodb_run_l0="disdrodb.l0.scripts.disdrodb_run_l0:disdrodb_run_l0"
# Data transfer
disdrodb_download_archive="disdrodb.data_transfer.scripts.disdrodb_download_archive:disdrodb_download_archive"
disdrodb_download_station="disdrodb.data_transfer.scripts.disdrodb_download_station:disdrodb_download_station"
disdrodb_upload_archive="disdrodb.data_transfer.scripts.disdrodb_upload_archive:disdrodb_upload_archive"
disdrodb_upload_station="disdrodb.data_transfer.scripts.disdrodb_upload_station:disdrodb_upload_station"
# Metadata archive
disdrodb_check_metadata_archive="disdrodb.metadata.scripts.disdrodb_check_metadata_archive:disdrodb_check_metadata_archive"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"

[tool.ruff]
select = ["F",
	  "E",
	  "I",
	  "Q",
	  "W",
	  "UP",
	  # "SIM",
	  # "PTH",
	  # "RET",
	 ]
ignore = ["E722"]
line-length = 120
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

[tool.black]
line-length = 120
preview = true

[tool.codespell]
    ignore-words-list = "nd,mis,thi"

[tool.coverage.run]
omit = [
  "disdrodb/l0/readers/*",
  "disdrodb/l0/manuals/*",
]
