[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "disdrodb"
authors = [
	{name = "Gionata Ghiggi"},
]
description = "disdrodb provides tools to download, standardize, share and analyze global disdrometer data."
readme = "README.md"
keywords = ["python", "disdrometer","parsivel", "drop size distribution"]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Unix",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
	"click",
	"tqdm",
	"pooch",
	"donfig",
	"requests",
	"PyYAML",
	"trollsift",
	"netCDF4",
	"pyarrow",
	"pandas",
	"dask[distributed]",
	"xarray",

]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
	"jupyter",
	"pre-commit",
	"pytest",
	"pydantic>=2.0.0", # requirement? l0/check_configs
	"pytest-cov",
	"pytest-mock",
	"requests-mock",
	"setuptools",
	"build",
	"twine",
	"loghub",
]

[project.urls]
homepage = "https://github.com/ltelab/disdrodb"
repository = "https://github.com/ltelab/disdrodb"
source = "https://github.com/ltelab/disdrodb"
tracker = "https://github.com/ltelab/disdrodb/issues"
documentation = "https://disdrodb.readthedocs.io"
changelog = "https://github.com/ltelab/disdrodb/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "disdrodb/_version.py"

[tool.setuptools]
packages = ["disdrodb"]

[project.scripts]
# Initialization
disdrodb_initialize_station="disdrodb.api.scripts.disdrodb_initialize_station:disdrodb_initialize_station"
# Metadata archive
disdrodb_check_metadata_archive="disdrodb.metadata.scripts.disdrodb_check_metadata_archive:disdrodb_check_metadata_archive"
# Data transfer
disdrodb_download_archive="disdrodb.data_transfer.scripts.disdrodb_download_archive:disdrodb_download_archive"
disdrodb_download_station="disdrodb.data_transfer.scripts.disdrodb_download_station:disdrodb_download_station"
disdrodb_upload_archive="disdrodb.data_transfer.scripts.disdrodb_upload_archive:disdrodb_upload_archive"
disdrodb_upload_station="disdrodb.data_transfer.scripts.disdrodb_upload_station:disdrodb_upload_station"
# L0A
disdrodb_run_l0a_station="disdrodb.l0.scripts.disdrodb_run_l0a_station:disdrodb_run_l0a_station"
disdrodb_run_l0a="disdrodb.l0.scripts.disdrodb_run_l0a:disdrodb_run_l0a"
# L0B
disdrodb_run_l0b_station="disdrodb.l0.scripts.disdrodb_run_l0b_station:disdrodb_run_l0b_station"
disdrodb_run_l0_station="disdrodb.l0.scripts.disdrodb_run_l0_station:disdrodb_run_l0_station"
# L0B concatenation
disdrodb_run_l0b_concat_station="disdrodb.l0.scripts.disdrodb_run_l0b_concat_station:disdrodb_run_l0b_concat_station"
disdrodb_run_l0b_concat="disdrodb.l0.scripts.disdrodb_run_l0b_concat:disdrodb_run_l0b_concat"
# L0
disdrodb_run_l0b="disdrodb.l0.scripts.disdrodb_run_l0b:disdrodb_run_l0b"
disdrodb_run_l0="disdrodb.l0.scripts.disdrodb_run_l0:disdrodb_run_l0"


[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"

[tool.black]
line-length = 120
preview = true

[tool.ruff]

line-length = 120
indent-width = 4

# Addional file to be formatted by ruff (in addition to *py)
extend-include = ["*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]

select = [
	# pydocstyle
    # "D",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-quotes
    "Q",
    # flake8-bugbear
    # "B",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    # "ARG",
    # flake8-raise
    "RSE",
    # flake8-pytest-style
    # "PT",
    # flake8-simplify
    # "SIM",
    # Perflint
    "PERF",
    # pandas-vet
    # "PD",
    # pylint
    "PL",
    # flake8-commas
    "COM",
    # flake8-slots
    "SLOT",
    # flake8-comprehensions
    "C4",
    # Ruff custom rules
    "RUF"

    #---------------------
    #### Future rules ####
    # flake8-use-pathlib
    # "PTH",
    # NumPy-specific rules  (for 2.0)
    # "NPY",
    # refurb
    # "FURB", # require preview
]
ignore = [
    "E722",
    "PT011", # pytest raised error must be checked if match the expected error msg
    "PERF203",
	"PLW2901",
    "B904",
	"RET504",

    # Docstyle Rules
    "D404", # Docstring can't start with "This"
    "D401", # First sentence must be in imperative mood

    # Complexity rules
    "PLR0913",
    "PLR2004",
    "PLR0912",
    "PLR0915",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]

# Ignore `E402` (import violations) in all Jupyter Notebooks.
"*.ipynb" = ["E402"]

# Rules to ignore in test files
"test_*.py" = [
    "ARG",  # avoid problems with fixtures
    "D100", "D101","D102", "D103", "D104", "D105",  # Missing docstrings
]
"setup.py" = ["D100"]
"*__init__.py" = ["D104"]


[tool.codespell]
ignore-words-list = "nd,mis,thi"

[tool.coverage.run]
omit = [
  "disdrodb/l0/readers/*",
  "disdrodb/l0/manuals/*",
]
